[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Points.gd" type="Script" id=3]
[ext_resource path="res://Assets/02intonacopr_nt.jpeg" type="Texture" id=4]
[ext_resource path="res://Assets/metal_pole_rusty_01.png" type="Texture" id=5]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Sounds/lose.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 252, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 252, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 85 )

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="Floor" type="Sprite" parent="."]
position = Vector2( 512, 590 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 20 )

[node name="P1Floor" type="StaticBody2D" parent="Floor" groups=[
"player_floor",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/P1Floor"]
position = Vector2( -260, 0 )
shape = SubResource( 3 )

[node name="P2Floor" type="StaticBody2D" parent="Floor" groups=[
"enemy_floor",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/P2Floor"]
position = Vector2( 260, 0 )
shape = SubResource( 4 )

[node name="NetSprite" type="Sprite" parent="Floor"]
position = Vector2( 0, -95 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 170 )

[node name="NetBody" type="StaticBody2D" parent="Floor/NetSprite"]
position = Vector2( 0, 95 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/NetSprite/NetBody"]
position = Vector2( 0, -95 )
shape = SubResource( 5 )

[node name="Wall" parent="." instance=ExtResource( 6 )]
position = Vector2( 5, -170 )

[node name="Wall2" parent="." instance=ExtResource( 6 )]
position = Vector2( 1019, -170 )

[node name="Wall3" parent="." instance=ExtResource( 6 )]
position = Vector2( 465.544, -920 )
rotation = 1.5708

[node name="StartPoint" type="Node2D" parent="."]
position = Vector2( 256, 416 )

[node name="StartPointEnemy" type="Node2D" parent="."]
position = Vector2( 768, 416 )

[node name="PlayerPoints" type="Label" parent="."]
margin_left = 192.0
margin_right = 256.0
margin_bottom = 14.0
rect_scale = Vector2( 3, 3 )
text = "1"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyPoints" type="Label" parent="."]
margin_left = 704.0
margin_right = 768.0
margin_bottom = 14.0
rect_scale = Vector2( 3, 3 )
text = "1"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." groups=[
"player",
] instance=ExtResource( 1 )]
position = Vector2( 238.051, 550.7 )

[node name="Enemy" parent="." groups=[
"enemy",
] instance=ExtResource( 7 )]
position = Vector2( 768, 560 )

[node name="BallReset" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 512, 192 )
stream = ExtResource( 8 )
